--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -30,7 +30,7 @@ jobs:
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
+      SKIP_AGENT_CREATION: "true"
     steps:
       - uses: actions/checkout@v4
 
