--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Terraform
+.terraform/
+.terraform.lock.hcl 
+terraform.tfstate
+.terraform.tfstate.lock.info
+terraform.tfstate.backup
 # C extensions
 *.so
 
